--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-dom": "^19.0.0",
     "lucide-react": "^0.468.0",
     "html2canvas": "^1.4.1"
+    "firebase": "^11.0.2"
   },
   "devDependencies": {
     "@types/react": "^19.0.0",
