--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "vb-score-recorder",
   "private": true,
@@ -13,7 +12,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "lucide-react": "^0.468.0",
-    "html2canvas": "^1.4.1"
+    "html2canvas": "^1.4.1",
     "firebase": "^11.0.2"
   },
   "devDependencies": {
